--- a/pom.xml
+++ b/pom.xml
@@ -95,19 +95,19 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Releases Nexus Repository</name>
-	      <url>http://172.31.85.52:8181/repository/paypal-releases/</url>
+	      <url>http://44.202.152.137:8181/repository/paypal-releases/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Snapshot Nexus Repository </name>
-	      <url>http:/172.31.85.52/:8181/repository/paypal-snapshots/</url>
+	      <url>http://44.202.152.137:8181/repository/paypal-snapshot/</url>
 	    </snapshotRepository>
-	    
+		
 	</distributionManagement>
 	
 	<build>
-		<finalName>tesla</finalName>
+		<finalName>paypal</finalName>
 		
 		<plugins>
 			<plugin>
