--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,7 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Releases Nexus Repository</name>
-	      <urlhttp://3.83.205.114:8081/repository/paypal-releases/></url>
+	      <url>http://3.83.205.114:8081/repository/paypal-releases/></url>
 	    </repository>
 	    
 	    <snapshotRepository>
